--- a/.github/workflows/pull_request.yml
+++ b/.github/workflows/pull_request.yml
@@ -7,14 +7,7 @@ on:
 
 jobs:
   test:
-    strategy:
-      fail-fast: false
-      matrix:
-        os:
-          - ubuntu-latest
-          - macos-10.15
-          - windows-latest
-    runs-on: ${{ matrix.os }}
+    runs-on: ubuntu-latest
 
     steps:
       - uses: actions/checkout@v4
@@ -32,9 +25,9 @@ jobs:
             ~/.cargo/
             target
             Cargo.lock
-          key: cargo-dev--${{ runner.os }}-${{ hashFiles('**/Cargo.lock') }}
+          key: cargo-dev--ubuntu-latest-${{ hashFiles('**/Cargo.lock') }}
           restore-keys: |
-            cargo-dev--${{ runner.os }}
+            cargo-dev--ubuntu-latest
 
       # Ensure that all components are compilable.
       - run: cargo test --color always --all
