chore: setup toolchain

--- a/.github/workflows/pull_request.yml
+++ b/.github/workflows/pull_request.yml
@@ -16,6 +16,7 @@ jobs:
 
       - uses: actions-rs/toolchain@v1
         with:
+          toolchain: stable
           profile: minimal
 
       - name: Cache
