chore: add target

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -18,6 +18,7 @@ jobs:
         with:
           toolchain: stable
           profile: minimal
+          target: wasm32-wasi
 
       - name: Cache
         uses: actions/cache@v2
