--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -6,8 +6,11 @@ on:
       - master
 
 jobs:
-  test:
+  release:
     runs-on: ubuntu-latest
+
+    permissions:
+      contents: write # to be able to publish a GitHub release
 
     steps:
       - uses: actions/checkout@v4
