--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -11,6 +11,7 @@ jobs:
 
     permissions:
       contents: write # to be able to publish a GitHub release
+      id-token: write # to be able to generate provenance
 
     steps:
       - uses: actions/checkout@v4
