--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "allow_importing_ts_extensions.wasm",
   "private": false,
   "publishConfig": {
-    "provenance": true
+    "provenance": true,
+    "access": "public"
   },
   "workspaces": [
     "./tests/fixture/jsx",
